cmake_minimum_required(VERSION 3.21)
project(AlgorithmProblemsSolved)

set(CMAKE_CXX_STANDARD 20)

#add_executable(1 "src/BOJ/BOJ_11505_구간 곱 구하기_211203.cpp")
#add_executable(2 "src/PGM/PGM_완주하지_못한_선수_211205.cpp")
#add_executable(3 "src/BOJ/BOJ_9935_문자열 폭발_211206.cpp")
#add_executable(4 "src/BOJ/BOJ_5636_생일_211206.cpp")
add_executable(5 "src/BOJ/BOJ_18870_좌표 압축_211206.cpp")