cmake_minimum_required(VERSION 3.21)
project(AlgorithmProblemsSolved)

set(CMAKE_CXX_STANDARD 20)

#add_executable(1 "src/BOJ/BOJ_11505_구간 곱 구하기_211203.cpp")
#add_executable(2 "src/PGM/PGM_완주하지_못한_선수_211205.cpp")
#add_executable(3 "src/BOJ/BOJ_9935_문자열 폭발_211206.cpp")
#add_executable(4 "src/BOJ/BOJ_5636_생일_211206.cpp")
#add_executable(5 "src/BOJ/BOJ_18870_좌표 압축_211206.cpp")
#add_executable(6 "src/BOJ/BOJ_2238_경매_211207.cpp")
#add_executable(7 "src/BOJ/BOJ_1208_부분수열의 합 2_211209.cpp")
#add_executable(8 "src/BOJ/BOJ_1208_부분수열의 합 2_211210.cpp")
#add_executable(9 "src/BOJ/BOJ_1450_냅색문제_211211.cpp")
#add_executable(10 "src/BOJ/BOJ_1208_부분수열의 합 2_211213.cpp")
#add_executable(11 "src/BOJ/BOJ_14225_부분수열의 합_211214.cpp")
add_executable(12 "src/BOJ/BOJ_1253_좋다_211216.cpp")