cmake_minimum_required(VERSION 3.21)
project(AlgorithmProblemsSolved)

set(CMAKE_CXX_STANDARD 20)

#add_executable(1 "src/BOJ/BOJ_11505_구간 곱 구하기_211203.cpp")
#add_executable(2 "src/PGM/PGM_완주하지_못한_선수_211205.cpp")
#add_executable(3 "src/BOJ/BOJ_9935_문자열 폭발_211206.cpp")
#add_executable(4 "src/BOJ/BOJ_5636_생일_211206.cpp")
#add_executable(5 "src/BOJ/BOJ_18870_좌표 압축_211206.cpp")
#add_executable(6 "src/BOJ/BOJ_2238_경매_211207.cpp")
#add_executable(7 "src/BOJ/BOJ_1208_부분수열의 합 2_211209.cpp")
#add_executable(8 "src/BOJ/BOJ_1208_부분수열의 합 2_211210.cpp")
#add_executable(9 "src/BOJ/BOJ_1450_냅색문제_211211.cpp")
#add_executable(10 "src/BOJ/BOJ_1208_부분수열의 합 2_211213.cpp")
#add_executable(11 "src/BOJ/BOJ_14225_부분수열의 합_211214.cpp")
#add_executable(12 "src/BOJ/BOJ_1253_좋다_211216.cpp")
#add_executable(13 "src/BOJ/BOJ_1253_좋다_211217.cpp")
#add_executable(14 "src/BOJ/BOJ_10451_순열 사이클_211217.cpp")
#add_executable(15 "src/BOJ/BOJ_3058_짝수를 찾아라_211218.cpp")
#add_executable(0 "src/BOJ/BOJ_23841_데칼코마니_211219.cpp")
#add_executable(0 "src/BOJ/BOJ_11942_고려대는 사랑입니다_211220.cpp")
#add_executable(0 "src/BOJ/BOJ_15439_Vera and Outfits_211221.cpp")
#add_executable(0 "src/BOJ/BOJ_8979_올림픽_211223.cpp")
#add_executable(0 "src/BOJ/BOJ_1015_수열 정렬_211224.cpp")
#add_executable(0 "src/BOJ/BOJ_23810_골뱅이 찍기_211226.cpp")
#add_executable(0 "src/BOJ/BOJ_7568_덩치_211227.cpp")
#add_executable(0 "src/BOJ/BOJ_2752_세수정렬_211228.cpp")
#dd_executable(0 "src/BOJ/BOJ_15680_연세대학교_211229.cpp")
#add_executable(0 "src/BOJ/BOJ_9610_사분면_211230.cpp")
#add_executable(0 "src/BOJ/BOJ_2805_나무 자르기_211230.cpp")
#add_executable(0 "src/BOJ/BOJ_1208_부분수열의 합 2_220111.cpp")
#add_executable(0 "src/BOJ/BOJ_2805_나무 자르기_220111.cpp")
add_executable(0 "src/BOJ/BOJ_2533_사회망 서비스(SNS)_220112.cpp")